ingress-in-namespace/ngiinx/deploymen-nginx-proxy-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx-proxy
  namespace: test-namespace
  labels:
    app: nginx-proxy
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
        version: v1
    spec:
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
          items:
            - key: nginx.conf
              path: nginx.conf
            - key: html.html
              path: html.html
      containers:
      - name: nginx-proxy
        image: nginx
        ports:
        - containerPort: 80
        resources: 
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 400m
            memory: 400Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - mountPath: /etc/nginx # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-conf
