ingress-in-namespace/ngiinx/svc-nginx-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-proxy
  namespace: test-namespace
spec:
  selector:
    app: nginx-proxy
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
